--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   <header>
     <div class="container-f">
       <div class="logo">
-        <h1>
-            <code>Sina Sari</code> </h1>
+        <h1><span style="color:red;"><</span><code>Sina Sari</code><span style="color:red;">></span></h1>
       </div>
       <nav>
         <ul class="navbar">
